--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
-  "name": "food-back-end",
-  "version": "1.0.0",
-  "description": "This is online food delivery project",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon ./src/index.server.js"
-  },
-  "keywords": [
-    "food",
-    "mern",
-    "project",
-    "backend",
-    "api",
-    "api"
-  ],
-  "author": "Tariq Khan Umraj",
-  "license": "ISC",
+  "name": "admin-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.10.1",
-    "mongoose": "^5.12.6"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+  "scripts": {
+    "start": "set PORT = 4000 && react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
